@startuml
skinparam monochrome false

package "fleet.domain.model" {
  class Route {
    - id: string
    - name: string
    - organizationId: string
    - routeState: string
    - departureTime: string
    - serviceDays: string[]
    - vehicleId: string
  }
  class Stop {
    - id: string
    - routeId: string
    - name: string
    - latitude: number
    - longitude: number
    - stopOrder: number
  }
  class Vehicle {
    - id: string
    - organizationId: string
    - plate: string
    - model: string
    - brand: string
    - capacity: number
  }
  class Assignment {
    - id: string
    - routeId: string
    - driverId: string
    - childIds: string[]
  }
}

package "fleet.application" {
  class FleetStore {
    - routes
    - stops
    - vehicles
    - assignments
    + loadRoutes(organizationId): void
    + loadStops(routeId): void
    + loadVehicles(organizationId): void
    + createRoute(request): void
    + activateRoute(id): void
    + createVehicle(request): void
    + createAssignment(request): void
  }
  class RouteStore <<legacy>> {
    - routes
    + fetchRoutes(): void
    + getRouteById(id): Route
    + addRoute(route): void
    + updateRoute(route): void
    + deleteRoute(id): void
  }
}

package "fleet.infrastructure" {
  class FleetApi {
    + createRoute(request)
    + getRoutesByOrganization(organizationId)
    + activateRoute(id)
    + addStop(request)
    + getStopsByRoute(routeId)
    + createVehicle(request)
    + getVehiclesByOrganization(organizationId)
    + createAssignment(request)
    + getAssignmentByRoute(routeId)
  }
  class RouteAssembler {
    + toEntityFromResource(resource)
    + toEntitiesFromResponse(response)
  }
  class StopAssembler {
    + toEntityFromResource(resource)
    + toEntitiesFromResponse(response)
  }
  class VehicleAssembler {
    + toEntityFromResource(resource)
    + toEntitiesFromResponse(response)
  }
  class AssignmentAssembler {
    + toEntityFromResource(resource)
  }
}

package "fleet.presentation.views" {
  class RouteManagementView <<view>> {
    - form: Route
    - vehicleOptions / studentOptions / studentGroupOptions
    - previewMap / formMap
    + loadRoutes(): void
    + openCreate(): void
    + openEdit(route): void
    + saveRoute(): void
    + deleteRoute(id): void
    + optimizeWaypoints(): void
    + showRouteOnMap(route): void
    + applyStudentGroupToStop(): void
  }
  class RouteListView <<view>> {
    - routes: Route[]
    + confirmDelete(route): void
  }
  class RouteFormView <<view>> {
    - form
    + saveRoute(): void
  }
}

' ─── Referencias a otros paquetes ────────────────────────────────────────────
package "shared.presentation.components" {
  class Layout {
  }
}

Route --> Stop
FleetStore ..> "fleet.domain.model.Route" : uses
FleetStore ..> "fleet.domain.model.Stop" : uses
FleetStore ..> "fleet.domain.model.Vehicle" : uses
FleetStore ..> "fleet.domain.model.Assignment" : uses
FleetStore ..> "fleet.infrastructure.FleetApi" : uses
FleetStore ..> "fleet.infrastructure.RouteAssembler" : uses
FleetStore ..> "fleet.infrastructure.StopAssembler" : uses
FleetStore ..> "fleet.infrastructure.VehicleAssembler" : uses
FleetStore ..> "fleet.infrastructure.AssignmentAssembler" : uses
RouteAssembler ..> "fleet.domain.model.Route" : creates
StopAssembler ..> "fleet.domain.model.Stop" : creates
VehicleAssembler ..> "fleet.domain.model.Vehicle" : creates
AssignmentAssembler ..> "fleet.domain.model.Assignment" : creates
RouteManagementView --> "fleet.domain.model.Route" : uses
RouteManagementView --> "fleet.domain.model.Stop" : uses
RouteManagementView --> "fleet.domain.model.Vehicle" : uses
RouteManagementView --> "fleet.domain.model.Assignment" : uses
RouteListView --> "fleet.domain.model.Route" : uses
RouteFormView --> "fleet.domain.model.Route" : uses
Layout --> RouteManagementView : routes to
Layout --> RouteListView : routes to
Layout --> RouteFormView : routes to
RouteManagementView --> FleetStore : uses
RouteListView --> RouteStore : uses
RouteFormView --> RouteStore : uses

@enduml
